src/pages/ru/v1.19.0/deployment/openreplay-admin.mdx
---
title: "Администрирование OpenReplay"
metaTitle: "Администрирование OpenReplay"
metaDescription: "Как легко администрировать и управлять вашим экземпляром OpenReplay."
layout: ~/layouts/MainLayout.astro
i18nReady: true
---

## CLI

CLI полезен для управления базовыми аспектами вашего экземпляра OpenReplay — такими как перезапуск или переустановка сервиса, доступ к журналам компонента или просто проверка состояния ваших backend-сервисов.

Запустите CLI с опцией `-h`:

```bash
openreplay -h
```

И посмотрите список всех доступных опций:

```shellsession
  ___                   ____            _
 / _ \ _ __   ___ _ __ |  _ \ ___ _ __ | | __ _ _   _
| | | | '_ \ / _ \ '_ \| |_) / _ \ '_ \| |/ _` | | | |
| |_| | |_) |  __/ | | |  _ <  __/ |_) | | (_| | |_| |
 \___/| .__/ \___|_| |_|_| \_\___| .__/|_|\__,_|\__, |
      |_|                        |_|            |___/

[INFO]
  Usage: openreplay [ -h | --help ]
                    [ -s | --status ]
                    [ -i | --install DOMAIN_NAME ]
                    [ -u | --upgrade ]
                    [ -U | --deprecated-upgrade /path/to/old_vars.yaml]
                    [ -r | --restart ]
                    [ -R | --Reload ]
                    [ -c | --cleanup N (in days) ]
                    [ -e | --edit ]
                    [ -p | --install-packages ]
                    [ -l | --logs SERVICE ]
         Services: alerts assets assist chalice
                   db ender frontend heuristics
                   http integrations nginx-controller
                   peers sink sourcemapreader storage
```

Backend OpenReplay опирается на следующие компоненты/сервисы:

| Сервис | Описание |
|---------|-------------|
| http | Принимает события и записи сессий |
| sink | Читает данные из конвейера потоковой передачи (Redis или Kafka для версии enterprise) и вставляет их во временное хранилище (NFS) |
| storage | Перемещает временные файлы записей сессий в сервис объектного хранилища |
| assets | Для кэширования ресурсов (CSS, шрифтов и иконок) для корректного отображения записей |
| db | Читает и записывает в различные базы данных (Postgres + ClickHouse для версии enterprise) |
| ender | Завершает пользовательские сессии при неактивности или отключении |
| chalice | API для обслуживания frontend |
| alerts | Отправляет уведомления (email, slack, внутри приложения, webhook), когда достигается заданный пользователем порог по любой из метрик производительности |
| integrations |  Отправляет и получает данные из поддерживаемых сторонних API (Sentry, Elastic, GitHub, Jira и т. д.) |

## Полезные команды

- Проверить состояние работоспособности OpenReplay

```sh
openreplay -s
```

- Проверить журналы сервисов

```sh
openreplay -l <service name>
```

## Увеличение мощности сервиса

Можно увеличить мощность любого сервиса, переопределив значения выделения cpu/памяти по умолчанию. Эти значения определяются во время процесса настройки на основе мощности вашего экземпляра и должны подходить для нужд большинства установок.

 Если у вас большой объём и мощная машина, просто запустите файл `openreplay -e` и переопределите ресурсы сервиса. В приведённом ниже примере мы делаем это для воркера `http`. Но это можно сделать для любого сервиса (то есть sink, storage, postgresql, redis и т. д.), раскомментировав и обновив приведённый ниже блок. Если вам нужно сделать это для нескольких сервисов, просто скопируйте и переименуйте/обновите тот же блок (следите за дублированием).

```yaml
http:
  resources:
    limits:
      cpu: 4096m
      memory: 8192Mi
    requests:
      cpu: 1024m
      memory: 2056Mi
```

Наконец, переустановите сервис, чтобы новые лимиты вступили в силу (ваши данные не будут потеряны):

```bash
openreplay -R
```

## Удаление OpenReplay

Выполните приведённые ниже команды, чтобы удалить OpenReplay:

```bash
sudo k3s-uninstall.sh
```

Вся конфигурация хранится в `/var/lib/openreplay/`.

```
sudo rm -rf /var/lib/openreplay/openreplay
```
